<resources>
    <string name="app_name">Daily Reminder</string>
    <string name="fb_app_id">2278761899086800</string>
    <string name="gms_app_id">ca-app-pub-3707640778474213~9885561591</string>
    <string name="matter_punch_add_title">Add Task</string>
    <string name="matter_punch_edit_title">Edit Task</string>
    <string name="matter_punch_positive_countdown">Count-down</string>
    <string name="matter_determine">Confirm</string>
    <string name="matter_punch_frequency_c">%d Freq</string>
    <string name="matter_punch_frequency_m">%d Minute</string>
    <string name="matter_punch_ed_frequency">Command</string>
    <string name="matter_punch_ed_frequency_end">Times</string>
    <string name="matter_punch_ed_time">Timing</string>
    <string name="matter_punch_ed_time_end">Minute</string>
    <string name="matter_punch_ed_no">None</string>
    <string name="matter_value_cannot_empty">The value set in the selected mode cannot be empty</string>
    <string name="matter_select_setup_mode">Please select your setup mode</string>
    <string name="matter_punch_time_value">The default time is 25 minutes</string>
    <string name="matter_punch_time_customize_time">Custom time is empty</string>
    <string name="matter_title_value_cannot_empty">Title is empty</string>
    <string name="matter_value_empty">Parameter setting error</string>
    <string name="matter_value_delete">Are you sure to delete this task? \nDelete a task will also delete the punch record of this task \n</string>
    <string name="matter_tab_reminder">Daily Reminder</string>
    <string name="matter_tab_home">Home</string>
    <string name="matter_tab_record">Punch</string>
    <string name="matter_tab_drink">Drink</string>
    <string name="matter_tab_calendar">Calendar</string>
    <string name="matter_tab_find">Find</string>
    <string name="matter_tab_setting">Setting</string>
    <string name="matter_day">Days</string>
    <string name="matter_left_day">Arrives in</string>
    <string name="matter_already_day">Already</string>
    <string name="matter_target">End Date:</string>
    <string name="matter_edit">Edit</string>
    <string name="matter_share">Share</string>
    <string name="matter_reminder_tint_time">Event Date</string>
    <string name="matter_reminder_repeat">Repeat</string>
    <string name="matter_reminder_top">Pin Top</string>
    <string name="matter_reminder_delete">Delete</string>
    <string name="matter_reminder_save_pic">Save Picture</string>
    <string name="matter_reminder_save">Save</string>
    <string name="matter_reminder_save_success">Save the picture successfully!</string>
    <string name="matter_reminder_save_failed">Failed to save the picture, please try again!</string>
    <string name="matter_reminder_title_hint">Enter event name</string>
    <string name="matter_reminder_new">New Event</string>
    <string name="matter_reminder_edit">Editor Event</string>
    <string name="matter_reminder_motto">Life needs a sense of ceremony. Don\'t forget important days</string>
    <string name="matter_advice_feedback">Feedback</string>
    <string name="matter_five_start">Score</string>
    <string name="matter_notification_hint">Turn on notification bar reminder</string>
    <string name="matter_privacy_hint">Privacy Policy</string>
    <string name="matter_rating_dialog_title">Rate Us</string>
    <string name="matter_rating_dialog_content">If you think the product is good, please give 5 stars praise!</string>
    <string name="matter_rating_feedback_content">If you think the product is good, please give 5 stars praise!</string>
    <string name="matter_cancel">Cancel</string>
    <string name="matter_submit">Submit</string>
    <string name="matter_confirm">Confirm</string>
    <string name="matter_abort">Abort</string>
    <string name="matter_success_task">Complete the task</string>
    <string name="matter_email">Email</string>
    <string name="matter_suggestion">Suggest</string>
    <string name="matter_email_tint">Please enter your email</string>
    <string name="matter_suggestion_tint">Please enter your suggestion</string>
    <string name="matter_rating_feedback_title">Feedback</string>
    <string name="matter_punch_clock_title">Check in</string>
    <string name="matter_drink_title">Drink Reminder</string>
    <string name="matter_tasks_empty">it\'s empty</string>
    <string name="matter_punch_clock_motto">Carve and give it ,rotten wood unbroken</string>
    <string name="matter_punch_clock_archive">Archived Tasks</string>
    <string name="matter_add">Add</string>
    <string name="matter_punch_each_time">%1$d Minutes</string>
    <string name="matter_punch_each_time_none">No Timing</string>
    <string name="matter_punch_days">Total %1$d days</string>
    <string name="matter_punch_weeks">Total %1$d weeks</string>
    <string name="matter_punch_total_day">Today %1$d/%2$d freq</string>
    <string name="matter_punch_total_week">Week %1$d/%2$d freq</string>
    <string name="matter_punch_total">Total %1$d freq</string>
    <string name="matter_punch_title">Add</string>
    <string name="matter_punch_time">Time</string>
    <string name="matter_punch_customize">Custom</string>
    <string name="matter_punch_not_time_consuming">No timing</string>
    <string name="matter_punch_positive_countup">Count-up</string>
    <string name="matter_punch_time_color">Color</string>
    <string name="matter_punch_customize_icon">Icon</string>
    <string name="matter_punch_not_time_consuming_icon">Repeat</string>
    <string name="matter_punch_positive_timing_icon">Target</string>
    <string name="matter_punch_every_day">Everyday</string>
    <string name="matter_punch_frequency">%d days</string>
    <string name="matter_punch_save">Save</string>
    <string name="matter_punch_select_color">Choose Color</string>
    <string name="matter_punch_select_icon">Choose Icon</string>
    <string name="matter_punch_once">Only once</string>
    <string name="matter_punch_weekly">Weekly</string>
    <string name="matter_punch_per_year">Per Year</string>
    <string name="matter_punch_total_day_minute">%1$d/%2$d minutes executed today</string>
    <string name="matter_punch_total_week_minute">%1$d/%2$d minutes executed this week</string>
    <string name="matter_punch_total_minute">%1$d minutes in total</string>
    <string name="matter_punch_notification_minute">It takes %1$d minutes to reach the goal</string>
    <string name="matter_punch_notification">%1$d times required to reach goa</string>
    <string name="matter_punch_dialog_no_target">Very good, reward a little red flower!</string>
    <string name="matter_punch_time_complete">Complete</string>
    <string name="matter_punch_time_start">Start</string>
    <string name="matter_punch_time_pause">Pause</string>
    <string name="matter_punch_time_complete_and_punch">Complete the task and punch in directly!</string>
    <string name="matter_punch_archived_click">Archived tasks, no punches!</string>
    <string name="matter_punch_history">Punch record</string>
    <string name="matter_punch_order_positive">Positive Sequence</string>
    <string name="matter_punch_order_negative">Reverse Order</string>
    <string name="matter_punch_history_time">%1$s record %2$d minute</string>
    <string name="matter_punch_task_interrupt">Task interruption</string>
    <string name="matter_punch_task_interrupt_content">The task is not completed yet, are you sure to give up?</string>
    <string name="matter_punch_task_complete">Task Completed</string>
    <string name="preset_punch_data_1_title">Learn English</string>
    <string name="preset_punch_data_2_title">Exercise Abdominal Muscles</string>
    <string name="item_monday">Monday</string>
    <string name="item_tuesday">Tuesday</string>
    <string name="item_wednesday">Wednesday</string>
    <string name="item_thursday">Thursday</string>
    <string name="item_friday">Friday</string>
    <string name="item_saturday">Saturday</string>
    <string name="item_sunday">Sunday</string>
    <string name="item_january">January</string>
    <string name="item_february">February</string>
    <string name="item_march">March</string>
    <string name="item_april">April</string>
    <string name="item_may">May</string>
    <string name="item_june">June</string>
    <string name="item_july">July</string>
    <string name="item_august">August</string>
    <string name="item_september">September</string>
    <string name="item_october">October</string>
    <string name="item_november">November</string>
    <string name="item_december">December</string>
    <string name="item_not_repeating">Not Repeating</string>
    <string name="item_repeat_weekly">Repeat Weekly</string>
    <string name="item_repeat_monthly">Repeat Monthly</string>
    <string name="item_repeat_every_year">Repeat Every Year</string>
    <string name="drink_item_title">Daily Hydration</string>
    <string name="drink_cup_capacity">%s / %s %s</string>
    <string name="drink_item_capacity">%s %s / %s </string>
    <string name="drink_next_time">Next drinking time </string>
    <string name="drink_drinking_records">Drinking records(%s)</string>
    <string name="drink_ok_content">Very Good！\nStay Hydrated！</string>
    <string name="option_menu_history_record">History Record</string>
    <string name="option_menu_edit_Goal">Edit Goal</string>
    <string name="drink_value_confidential">Confidential</string>
    <string name="drink_value_male">Male</string>
    <string name="drink_value_female">Female</string>
    <string name="drink_water_goals">Drinking water goals</string>
    <string name="drink_unit">Unit</string>
    <string name="drink_gender">Gender</string>
    <string name="drink_body_weight">Body weight</string>
    <string name="drink_wake_up_time">Wake-up time</string>
    <string name="drink_sleeping_time">Sleeping time</string>
    <string name="invite_content">Life needs a sense of ceremonies, important days are memorable !\n GooglePlay：https://play.google.com/store/apps/details?id=com.mobo.daymatter.dailyreminder</string>
    <string name="drink_toast_capacity_lowest">The current single drinking water capacity has been the lowest value</string>
    <string name="drink_toast_capacity_highest">The current single drinking water capacity is the highest value</string>
    <string name="drink_toast_total_lowest">The current total drinking water capacity cannot be lower than the minimum value</string>
    <string name="drink_toast_total_progress">The current drinking water progress setting cannot be lower than 0</string>
    <string name="dialog_calculate_water_drinking">Calculate the amount of drinking water \t>>></string>
    <string name="history_record_weekly_average">Weekly average</string>
    <string name="history_record_monthly_average">Monthly average</string>
    <string name="history_record_average_completion">Average completion</string>
    <string name="history_record_drinking_frequency">Drinking frequency</string>
    <string name="history_record_value">%s%s / Day</string>
    <string name="time_text_value">%s:%s</string>
    <string name="toast_not_time_to_drink">It\'s not time to drink</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="drinking">Drinking</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="drinking_water_value">Drink water %d/%d%s</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="start_calculating">Start calculating</string>
    <string name="ok">Ok</string>
    <string name="you_daily_water_drinking_goal">You daily water drinking goal</string>
    <string name="generating_a_plan_for_you">Generating a plan for you……</string>
    <string name="we_need_some">We need some basic data to provide\ntailored hydration advice.\nThese data will be kept secret.</string>
    <string name="when_you_sleep">We\'ll won\'t disturb you when you sleep.</string>
</resources>