<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_rating"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/dialog_dialog_bottom">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/matter_rating_feedback_title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/matter_rating_feedback_content"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matter_email"
        android:textColor="@android:color/black"
        android:textSize="1sp" />

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/matter_email_tint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="#B3B4B5"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matter_suggestion"
        android:textColor="@android:color/black"
        android:textSize="1sp" />
    <EditText
        android:id="@+id/et_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="56dp"
        android:textColor="@android:color/black"
        android:textColorHint="#B3B4B5"
        android:textSize="16sp"
        android:hint="@string/matter_suggestion_tint" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/dialog_btn_submit_background"
        android:text="@string/matter_submit"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>

