<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_layout"
    android:layout_width="280dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_style_tint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/matter_punch_ed_time"
            android:textColor="#272304"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/ed_time"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:inputType="number"
            android:text="25"
            android:maxLines="1"
            android:textColor="#272304"
            android:textColorHint="#9B9B9D"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/matter_punch_ed_time_end"
            android:textColor="#272304"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/yellow_corner_bg"
            android:gravity="center"
            android:text="@string/matter_cancel"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/yellow_corner_bg"
            android:gravity="center"
            android:text="@string/matter_tab_setting"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/matter_punch_customize"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

</FrameLayout>