<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_start_icon"
        android:visibility="gone"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="14dp"
            android:gravity="left|center_vertical"
            android:text="@string/drinking_water"
            android:textColor="#111213"/>

        <TextView
            android:id="@+id/tv_notification_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:text="@string/drinking_water_value"
            android:textColor="#8E8E8E"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_pendingIntent"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:background="@drawable/matter_add_bg"
        android:layout_gravity="center_vertical|end"
        android:gravity="center"
        android:textSize="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/white"
        android:text="@string/drinking"/>
</LinearLayout>